samples/_failures_safe/1761404719_05f795_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01d61281.c: In function ‘bfs_traversal’:
./samples/SAFE/__tmp_01d61281.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_01d61281.c:164:5: error: expected declaration or statement at end of input
  164 |     if
      |     ^~
